@@ -2153,3 +2153,14 @@ a:link {
  border:none;
 }
 
+.cIFrameLarge {
+ position:fixed;
+ left:0;
+ margin:0;
+ padding:0;
+ display:block;
+ width:100%;
+ height:calc(100% - 120px);
+ border:none;
+}
+
