@@ -1,0 +1,12 @@
+<div id="maincontent">
+</div>
+
+<script type="text/javascript" charset="utf-8">
+$(document).ready(function() {
+	var htmlcontent = '';
+	htmlcontent+='<iframe class="cIFrameLarge" id="IMain" src="http://forecast.io/#/f/' + $.myglobals.Latitude + ',' + $.myglobals.Longitude + '"></iframe>';
+	$('#maincontent').html(htmlcontent);
+	$('#maincontent').i18n();
+	//src="http://forecast.io/#/f/52.216485,5.169528"
+});  
+</script>
