@@ -256,7 +256,9 @@ $(document).ready(function() {
 		tempscale: 1.0,
 		tempsign: "C",
 		historytype : 1,
-		LastPlanSelected: 0
+		LastPlanSelected: 0,
+		Latitude: "",
+		Longitude: ""
 	};
 	
 	if( /Android|webOS|iPhone|iPad|iPod|ZuneWP7|BlackBerry/i.test(navigator.userAgent) ) {
