@@ -628,6 +628,11 @@ function RefreshTemps()
 	$.myglobals.refreshTimer = setInterval(RefreshTemps, 10000);
 }
 
+function ShowForecast()
+{
+	SwitchLayout("Forecast");
+}
+
 function ShowTemps()
 {
 	clearInterval($.myglobals.refreshTimer);
@@ -646,9 +651,9 @@ function ShowTemps()
         '\t  </td>\n' +
         '\t  <td align="right">\n' +
         '\t    <a class="btnstyle" onclick="ShowCustomTempLog();" data-i18n="Custom Graph">Custom Graph</a>\n';
-  if (window.my_config.userrights==2) {
+  if ($.myglobals.Latitude!="") {
 	tophtm+=
-        '\t    <a class="btnstyle" onclick="AddTempDevice();" data-i18n="Add Sensor">Add Sensor</a>\n';
+        '\t    <a id="Forecast" class="btnstyle" onclick="ShowForecast();" data-i18n="Forecast">Forecast</a>\n';
   }
   tophtm+=     
         '\t  </td>\n' +
