@@ -262,6 +262,11 @@ function RefreshWeathers()
   $.myglobals.refreshTimer = setInterval(RefreshWeathers, 10000);
 }
 
+function ShowForecast()
+{
+	SwitchLayout("Forecast");
+}
+
 function ShowWeathers()
 {
 	clearInterval($.myglobals.refreshTimer);
@@ -276,10 +281,10 @@ function ShowWeathers()
         '\t<table class="bannav" id="bannav" border="0" cellpadding="0" cellspacing="0" width="100%">\n' +
         '\t<tr>\n' +
 		'\t  <td align="left"><div id="timesun" /></td>\n';
-  if (window.my_config.userrights==2) {
+  if ($.myglobals.Latitude!="") {
 	tophtm+=
         '\t  <td style="width: 150px;" align="right">\n' +
-        '\t    <a class="btnstyle" onclick="AddWeatherDevice();" data-i18n="Add Sensor">Add Sensor</a>\n' +
+        '\t    <a id="Forecast" class="btnstyle" onclick="ShowForecast();" data-i18n="Forecast">Forecast</a>\n' +
         '\t  </td>\n';
   }
   tophtm+=
