@@ -66,6 +66,7 @@ Version 1.0.xxxx (April xxth 2014)
 - Implemented: Support ENI provider in ICY hardware
 - Implemented: 'Toon' hardware support
 - Implemented: Hardware device auto restart option
+- Implemented: Forecast button in temperature/weather tab
 
 Version 1.0.1680 (April 21th 2014)
 - Implemented: Support for Forecast.io
